--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRQGEoqpNtOgqMuGIF9EW8fEuNkNAe0EU&callback=initMap"></script>
+    
     <link rel="stylesheet" href="style.css">
     <!-- <meta name=”viewport” content=”width=device-width, initial-scale=1.0"> -->
     <title>SweetDay</title>
@@ -25,7 +24,7 @@
               <div class="collapse navbar-collapse" id="navbarsExample09">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">關於我們About</a>
+                    <a class="nav-link" href="about.html">關於我們About</a>
                   </li>
                 </ul>
               </div>
@@ -62,15 +61,15 @@
 
     <div class="listContainer">
         <div class="list">
-          <a href="">
+          <a href="fusion.html">
             <div class="listInfo">
-              <img src="" alt=""></a>
+              <img src="" alt="">
               <div class="description">創意料理</div>
               <div class="smallDescription">Fusion</div>
-            </div>
+            </div></a>
         </div>
         <div class="list">
-          <a href="">
+          <a href="customized.html">
             <div class="listInfo">
               <img src="" alt=""></a>
               <div class="description">客製化餐盒</div>
@@ -78,7 +77,7 @@
             </div>
         </div>
           <div class="list">
-          <a href="">
+          <a href="popup.html">
             <div class="listInfo">
               <img src="" alt=""></a>
               <div class="description">特色快閃</div>
@@ -86,7 +85,7 @@
             </div>
         </div>
         <div class="list">
-          <a href="">
+          <a href="gift.html">
             <div class="listInfo">
               <img src="" alt=""></a>
               <div class="description">節慶禮盒</div>
@@ -95,7 +94,26 @@
         </div>
       </div>
     </div>
-  <div id="map"></div>
+  <!-- <div class="mapContainer">
+    <div class="row">
+      <div class="col-sm-4">
+        <h1>交通資訊</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.656995120609!2d120.6460362759362!3d24.1486811733685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693dc3f0df176f%3A0xaadeb85c8e2871e9!2z5q-P5pel55Sc5a625bi45YGl5bq36aSQ55uS44CB5pep5Y2I6aSQ!5e0!3m2!1szh-TW!2stw!4v1713353871345!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="col-sm-8">
+        <h2>交通資訊</h2>
+      </div>
+</div>
+</div> -->
+<div class="row">
+  <div class="col google-map">
+      <h5>Google Map：</h5>
+    <div id="map" class="embed-responsive embed-responsive-16by9"></div>
+  </div>
+</div>
 
+<script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRQGEoqpNtOgqMuGIF9EW8fEuNkNAe0EU&callback=initMap"></script>
+<!-- <div id="map"></div> -->
 </body>
 </html>
